test/files/neg/t900.check
t900.scala:4: error: type mismatch;
 found   : Foo.this.x.type (with underlying type Foo.this.bar)
 required: AnyRef
        def break(): x.type
                     ^
one error found
